# C-programs

Arrays/: Counting_sample_combinations.cpp  Zliczanie_kombinacji_probek.cpp
Bit Fields/: Bit fields, union, and structure.cpp  Pola bitowe, unia, struktura.cpp
C/: Disemvowel Trolls.c
C++ builder/Arkanoid/: Project1.bpr  Unit1.cpp  Unit1.h  Unit1.~cpp  Unit1.~h
C++ builder/MemoCards/: ForestCards.bpr  ForestCards.tds  ForestCards.~bpr  ForestCards.~cpp  Unit1.cpp  Unit1.h  Unit1.~dfm
C++ builder/Notepad/: MojNotatnik.bpr  MojNotatnik.cpp  MojNotatnik.tds  MojNotatnikUnit.cpp  MojNotatnikUnit.~cpp  MojNotatnikUnit.~dfm  MojNotatnikUnit.~h  Unit1.cpp  Unit1.h
C++ builder/Tiktactoe/: Project2.~bpr  Unit1.cpp  Unit1.h  Unit2.cpp  Unit2.dfm  Unit2.h
C/CRC coder and decoder with tests in open5g network/Coding/: crc16_ccitt.c  crc16_ccitt.h  decoder.c  decoder.h  encoder.c  encoder.h  meson.build
C/CRC coder and decoder with tests in open5g network/Test/: crc16-test.c  meson.build
Project Robot/: LinkVideoYouTube.txt  Robot.h  Robot.ino
Recursion/: Digital Root.cpp
String/: Bus_stop.cpp  Converting a number to a string and determining its parity.cpp  Numeral.cpp  Parsing command-line arguments.cpp  Przystanki.cpp  Replace With Alphabet Position.cpp  Słowne okreslenie liczby.cpp  Wczytywanie arg z wiersza polecen.cpp  Zamiana liczby na string i okreslenie parzystosci.cpp
Vector and Map/: Find the odd int.cpp
Virtual function/: Ciagi aryt i geom, dziedziczenie, kl virtualne i konstruk wirtualne.cpp  Inheritance, virtual class, and virtual constructor.cpp
(+140 files in other folders)
